--- a/AutoHunt/app/src/main/res/values/colors.xml
+++ b/AutoHunt/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="colorMoss1">#006270</color>
+    <color name="colorMoss2">#009394</color>
+    <color name="colorMoss3">#00E0C7</color>
+    <color name="colorMossAlternative">#353837</color>
+
 </resources>
