implement login/register requests

--- a/AutoHunt/app/src/main/res/layout/activity_home.xml
+++ b/AutoHunt/app/src/main/res/layout/activity_home.xml
@@ -7,6 +7,9 @@
         <variable
             name="viewPagerAdapter"
             type="mds.mobile.autohunt.home.adapters.AHHomeViewPagerAdapter" />
+        <variable
+            name="viewModel"
+            type="mds.mobile.autohunt.home.viewModels.AHHomeViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
