--- a/AutoHunt/app/src/main/res/layout/fragment_login.xml
+++ b/AutoHunt/app/src/main/res/layout/fragment_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data class="AHLoginFragmentBinding">
+
         <variable
             name="viewModel"
             type="mds.mobile.autohunt.authentication.viewModels.AHLoginFragmentViewModel" />
@@ -12,32 +13,34 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".authentication.views.AHLoginFragment">
+        tools:context=".authentication.views.fragments.AHLoginFragment">
 
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/til_email_container"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/default_padding"
             android:gravity="center"
             android:minHeight="?android:attr/actionBarSize"
-            android:layout_margin="@dimen/default_padding"
             android:paddingStart="@dimen/default_padding_half"
             android:paddingTop="@dimen/default_padding"
             android:paddingEnd="@dimen/default_padding_half"
             android:paddingBottom="@dimen/default_padding"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.30">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/tie_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textEmailAddress"
                 android:hint="Email"
+                android:text="@={viewModel.email}"
+                android:afterTextChanged="@{() -> viewModel.updateLoginCapability()}"
+                android:inputType="textEmailAddress"
                 android:paddingStart="@dimen/default_padding"
                 android:paddingEnd="@dimen/default_padding"
                 android:singleLine="true" />
@@ -47,53 +50,79 @@
             android:id="@+id/til_pass_container"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/default_padding"
+            android:layout_marginEnd="@dimen/default_padding"
             android:gravity="center"
             android:minHeight="?android:attr/actionBarSize"
             android:paddingStart="@dimen/default_padding_half"
             android:paddingTop="@dimen/default_padding"
             android:paddingEnd="@dimen/default_padding_half"
             android:paddingBottom="@dimen/default_padding"
-            android:layout_marginStart="@dimen/default_padding"
-            android:layout_marginEnd="@dimen/default_padding"
-            app:layout_constraintStart_toStartOf="parent"
+            app:passwordToggleEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/til_email_container">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/tie_pass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword"
                 android:hint="Password"
+                android:text="@={viewModel.password}"
+                android:afterTextChanged="@{() -> viewModel.updateLoginCapability()}"
+                android:inputType="textPassword"
                 android:paddingStart="@dimen/default_padding"
                 android:paddingEnd="@dimen/default_padding"
                 android:singleLine="true" />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <TextView
+            android:id="@+id/tv_error"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@{viewModel.error}"
+            android:textColor="@android:color/holo_red_light"
+            android:gravity="center"
+            app:layout_constraintTop_toBottomOf="@id/til_pass_container"
+            app:layout_constraintBottom_toTopOf="@id/tv_go_to_register"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintVertical_bias="0.30"
+            app:layout_constraintWidth_percent="0.40"
+            />
+
         <Button
             android:id="@+id/btn_log_in"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="LOG IN"
             android:layout_margin="@dimen/default_padding"
+            android:enabled="@{safeUnbox(viewModel.loginEnabled)}"
+            android:background="@drawable/selector_primary_button_moss"
+            android:elevation="@dimen/default_elevation"
             android:paddingStart="@dimen/default_padding_double"
-            android:paddingEnd="@dimen/default_padding_double"
             android:paddingTop="@dimen/default_padding"
+            android:paddingEnd="@dimen/default_padding_double"
             android:paddingBottom="@dimen/default_padding"
-            app:layout_constraintTop_toBottomOf="@id/til_pass_container"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:text="LOG IN"
+            android:textColor="@android:color/white"
+            android:onClick="@{() -> viewModel.fireLoginUser()}"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.20"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/til_pass_container"
+            app:layout_constraintVertical_bias="0.40"
+            app:layout_constraintWidth_percent="0.40" />
 
         <TextView
+            android:id="@+id/tv_go_to_register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/default_padding"
             android:text="Go to Sign up"
+            android:onClick="@{() -> viewModel.goToRegister()}"
             app:layout_constraintBottom_toTopOf="@id/btn_log_in"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_margin="@dimen/default_padding"/>
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
