--- a/AutoHunt/app/src/main/res/layout/fragment_car_form.xml
+++ b/AutoHunt/app/src/main/res/layout/fragment_car_form.xml
@@ -1,14 +1,168 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data class="AHCarFormFragmentBinding">
 
+        <variable
+            name="viewModel"
+            type="mds.mobile.autohunt.home.viewModels.AHCarFormFragmentViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/holo_red_light">
+        android:background="@color/colorMossAlternative">
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_from"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/default_padding"
+            android:layout_marginEnd="@dimen/default_padding"
+            app:cardCornerRadius="@dimen/default_padding"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/default_padding"
+            android:paddingBottom="@dimen/default_padding">
+
+        <TextView
+            android:id="@+id/tv_brand"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/default_padding"
+            android:text="Brand:"
+            android:textSize="@dimen/material_text_subhead"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Spinner
+            android:id="@+id/sp_brand"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/default_padding"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_brand"
+            app:setupSpinnerAdapter="@{viewModel.brands}" />
+
+        <TextView
+            android:id="@+id/tv_price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/default_padding"
+            android:text="Price:"
+            android:textSize="@dimen/material_text_subhead"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/et_start_price" />
+
+        <EditText
+            android:id="@+id/et_start_price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/default_padding_double"
+            android:layout_marginTop="@dimen/default_padding"
+            android:hint="De la"
+            android:minWidth="100dp"
+            android:singleLine="true"
+            android:textAlignment="center"
+            app:layout_constraintEnd_toStartOf="@id/et_max_price"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintStart_toEndOf="@id/tv_price"
+            app:layout_constraintTop_toBottomOf="@id/sp_brand" />
+
+        <EditText
+            android:id="@+id/et_max_price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="pana la"
+            android:minWidth="100dp"
+            android:singleLine="true"
+            android:textAlignment="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/et_start_price"
+            app:layout_constraintTop_toTopOf="@id/et_start_price" />
+
+
+        <TextView
+            android:id="@+id/tv_kilometers"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/default_padding"
+            android:text="Kilometers:"
+            android:textSize="@dimen/material_text_subhead"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/et_start_km" />
+
+        <EditText
+            android:id="@+id/et_start_km"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/default_padding"
+            android:hint="De la"
+            android:minWidth="100dp"
+            android:singleLine="true"
+            android:textAlignment="center"
+            app:layout_constraintEnd_toEndOf="@id/et_start_price"
+            app:layout_constraintStart_toStartOf="@id/et_start_price"
+            app:layout_constraintTop_toBottomOf="@id/et_start_price" />
+
+        <EditText
+            android:id="@+id/et_max_km"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="pana la"
+            android:minWidth="100dp"
+            android:singleLine="true"
+            android:textAlignment="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/et_start_km"
+            app:layout_constraintTop_toTopOf="@id/et_start_km" />
+
+        <TextView
+            android:id="@+id/tv_year"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/default_padding"
+            android:text="Year:"
+            android:textSize="@dimen/material_text_subhead"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/et_start_year" />
+
+        <EditText
+            android:id="@+id/et_start_year"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/default_padding"
+            android:hint="De la"
+            android:minWidth="100dp"
+            android:singleLine="true"
+            android:textAlignment="center"
+            app:layout_constraintEnd_toEndOf="@id/et_start_km"
+            app:layout_constraintStart_toStartOf="@id/et_start_km"
+            app:layout_constraintTop_toBottomOf="@id/et_start_km" />
+
+        <EditText
+            android:id="@+id/et_max_year"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="pana la"
+            android:minWidth="100dp"
+            android:singleLine="true"
+            android:textAlignment="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/et_start_year"
+            app:layout_constraintTop_toTopOf="@id/et_start_year" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.cardview.widget.CardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
