--- a/AutoHunt/app/src/main/res/layout/fragment_car_list.xml
+++ b/AutoHunt/app/src/main/res/layout/fragment_car_list.xml
@@ -10,7 +10,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/colorMossAlternative">
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="0dp"
