--- a/AutoHunt/app/src/main/res/layout/item_car.xml
+++ b/AutoHunt/app/src/main/res/layout/item_car.xml
@@ -3,86 +3,100 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data class="AHCarItemDataBinding">
+
         <variable
             name="viewModel"
             type="mds.mobile.autohunt.home.viewModels.AHCarItemViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/default_padding"
+        app:cardCornerRadius="@dimen/default_padding">
 
-        <ImageView
-            android:id="@+id/imv_car"
-            android:layout_width="180dp"
-            android:layout_height="0dp"
-            android:layout_margin="@dimen/default_padding"
-            app:loadImageFromUrl="@{viewModel.car.imageUrl}"
-            app:layout_constraintDimensionRatio="16:9"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-
-        <TextView
-            android:id="@+id/tv_brand"
-            android:layout_width="0dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@{viewModel.car.brand}"
-            android:textAlignment="center"
-            android:textSize="22sp"
-            android:singleLine="true"
-            android:ellipsize="end"
-            android:ems="3"
-            android:textStyle="bold"
-            app:layout_constraintVertical_bias="0.25"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/imv_car"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            android:paddingTop="@dimen/default_padding"
+            android:paddingBottom="@dimen/default_padding">
 
-        <TextView
-            android:id="@+id/tv_year"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@{viewModel.car.year.toString()}"
-            android:textAlignment="center"
-            app:layout_constraintTop_toBottomOf="@id/tv_brand"
-            app:layout_constraintStart_toEndOf="@id/imv_car"
-            app:layout_constraintEnd_toStartOf="@id/tv_km"/>
+            <ImageView
+                android:id="@+id/imv_car"
+                android:layout_width="160dp"
+                android:layout_height="0dp"
+                android:layout_margin="@dimen/default_padding"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintDimensionRatio="16:9"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:loadImageFromUrl="@{viewModel.car.imageUrl}" />
 
-        <TextView
-            android:id="@+id/tv_km"
-            android:layout_width="0dp"
-            android:text="@{@string/car_km(viewModel.car.kilometers)}"
-            android:textAlignment="center"
-            app:layout_constraintTop_toBottomOf="@id/tv_brand"
-            app:layout_constraintStart_toEndOf="@id/tv_year"
-            app:layout_constraintEnd_toStartOf="@id/tv_fuel"
-            android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/tv_brand"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:ems="3"
+                android:singleLine="true"
+                android:text="@{viewModel.car.brand}"
+                android:textAlignment="center"
+                android:textSize="22sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/imv_car"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.10" />
 
-        <TextView
-            android:id="@+id/tv_fuel"
-            android:layout_width="0dp"
-            android:text="@{viewModel.car.brand}"
-            android:textAlignment="center"
-            app:layout_constraintHorizontal_chainStyle="spread"
-            app:layout_constraintTop_toBottomOf="@id/tv_brand"
-            app:layout_constraintStart_toEndOf="@id/tv_km"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/tv_year"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@{viewModel.car.year.toString()}"
+                android:textAlignment="center"
+                android:layout_marginTop="@dimen/default_padding"
+                app:layout_constraintEnd_toStartOf="@id/tv_km"
+                app:layout_constraintStart_toEndOf="@id/imv_car"
+                app:layout_constraintTop_toBottomOf="@id/tv_brand" />
 
-        <TextView
-            android:id="@+id/tv_price"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@{@string/car_price_euro(viewModel.car.price)}"
-            android:textStyle="bold"
-            android:textAlignment="center"
-            android:textSize="@dimen/material_text_head"
-            app:layout_constraintTop_toBottomOf="@id/tv_km"
-            app:layout_constraintStart_toEndOf="@id/imv_car"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            <TextView
+                android:id="@+id/tv_km"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@{@string/car_km(viewModel.car.kilometers)}"
+                android:textAlignment="center"
+                android:layout_marginTop="@dimen/default_padding"
+                app:layout_constraintEnd_toStartOf="@id/tv_fuel"
+                app:layout_constraintStart_toEndOf="@id/tv_year"
+                app:layout_constraintTop_toBottomOf="@id/tv_brand" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/tv_fuel"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@{viewModel.car.fuelType}"
+                android:textAlignment="center"
+                android:layout_marginTop="@dimen/default_padding"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_chainStyle="spread"
+                app:layout_constraintStart_toEndOf="@id/tv_km"
+                app:layout_constraintTop_toBottomOf="@id/tv_brand" />
+
+            <TextView
+                android:id="@+id/tv_price"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@{@string/car_price_euro(viewModel.car.price)}"
+                android:textAlignment="center"
+                android:textSize="@dimen/material_text_head"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/imv_car"
+                app:layout_constraintTop_toBottomOf="@id/tv_km" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
 </layout>
