--- a/AutoHunt/app/src/main/res/layout/fragment_user_data.xml
+++ b/AutoHunt/app/src/main/res/layout/fragment_user_data.xml
@@ -1,14 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data class="AHUserDataFragmentBinding">
-
+        <variable
+            name="viewModel"
+            type="mds.mobile.autohunt.home.viewModels.AHUserDataFragmentViewModel" />
     </data>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/holo_blue_light">
+        android:layout_height="wrap_content"
+        android:background="@color/colorMossAlternative">
+
+        <ImageView
+            android:id="@+id/imv_profile"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
+            android:src="@drawable/user"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/cly_container"
+            app:layout_constraintBottom_toTopOf="@id/cly_container"/>
+
+        <ImageView
+            android:id="@+id/cly_container"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/ic_vector_5"
+            app:layout_constraintHeight_percent="0.65"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <EditText
+            android:id="@+id/tv_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@={viewModel.name}"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:hint="Name"
+            android:textSize="@dimen/material_text_title"
+            android:background="@null"
+            android:layout_margin="@dimen/default_padding"
+            app:isEditable="@{viewModel.isEditable}"
+            app:layout_constraintVertical_bias="0.17"
+            app:layout_constraintTop_toBottomOf="@id/imv_profile"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
+        <EditText
+            android:id="@+id/tv_email"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@={viewModel.email}"
+            android:textAlignment="center"
+            android:layout_margin="@dimen/default_padding"
+            android:textStyle="bold"
+            android:hint="Email"
+            android:textSize="@dimen/material_text_title"
+            android:background="@null"
+            app:layout_constraintTop_toBottomOf="@id/tv_name"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:ignore="Deprecated" />
+
+        <EditText
+            android:id="@+id/tv_phone"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textSize="@dimen/material_text_title"
+            android:background="@null"
+            android:hint="Phone"
+            android:text="@={viewModel.phone}"
+            android:textAlignment="center"
+            android:layout_margin="@dimen/default_padding"
+            app:isEditable="@{viewModel.isEditable}"
+            app:layout_constraintTop_toBottomOf="@id/tv_email"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
+
+        <Button
+            android:id="@+id/btn_log_in"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/default_padding_double"
+            android:elevation="@dimen/default_elevation"
+            android:paddingStart="@dimen/default_padding_double"
+            android:paddingTop="@dimen/default_padding"
+            android:paddingEnd="@dimen/default_padding_double"
+            android:paddingBottom="@dimen/default_padding"
+            android:textColor="@android:color/white"
+            android:onClick="@{() -> viewModel.onEditClick()}"
+            editSave="@{viewModel.isEditable}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintVertical_bias="0.40"
+            app:layout_constraintWidth_percent="0.40" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
+
 </layout>
