--- a/AutoHunt/app/src/main/res/layout/fragment_car_list.xml
+++ b/AutoHunt/app/src/main/res/layout/fragment_car_list.xml
@@ -5,7 +5,7 @@
     <data class="AHCarListFragmentBinding">
         <variable
             name="adapter"
-            type="mds.mobile.autohunt.home.adapters.AHCarsAdapter" />
+            type="androidx.recyclerview.widget.RecyclerView.Adapter" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
