--- a/AutoHunt/app/src/main/res/layout/fragment_car_form.xml
+++ b/AutoHunt/app/src/main/res/layout/fragment_car_form.xml
@@ -40,7 +40,8 @@
             android:text="Brand:"
             android:textSize="@dimen/material_text_subhead"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/sp_brand"/>
 
         <Spinner
             android:id="@+id/sp_brand"
@@ -49,8 +50,30 @@
             android:layout_margin="@dimen/default_padding"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_brand"
-            app:setupSpinnerAdapter="@{viewModel.brands}" />
+            app:layout_constraintBottom_toTopOf="@id/tv_model"
+            app:setupSpinnerAdapter="@{viewModel.brands}"
+            app:onItemSelectedListener="@{viewModel.brandsItemSelectedListener}"/>
+
+        <TextView
+            android:id="@+id/tv_model"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/default_padding"
+            android:text="Model:"
+            android:textSize="@dimen/material_text_subhead"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/sp_model"/>
+
+        <Spinner
+            android:id="@+id/sp_model"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/default_padding"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_model"
+            app:setupSpinnerAdapter="@{viewModel.modelsObservable}"
+            app:onItemSelectedListener="@{viewModel.modelsItemSelectedListener}"/>
 
         <TextView
             android:id="@+id/tv_price"
@@ -75,7 +98,7 @@
             app:layout_constraintEnd_toStartOf="@id/et_max_price"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toEndOf="@id/tv_price"
-            app:layout_constraintTop_toBottomOf="@id/sp_brand" />
+            app:layout_constraintTop_toBottomOf="@id/sp_model" />
 
         <EditText
             android:id="@+id/et_max_price"
