--- a/AutoHunt/app/src/main/res/layout/item_car.xml
+++ b/AutoHunt/app/src/main/res/layout/item_car.xml
@@ -44,11 +44,11 @@
                 android:textAlignment="center"
                 android:textSize="22sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/tv_km
+"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/imv_car"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.10" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/tv_year"
@@ -70,7 +70,8 @@
                 android:layout_marginTop="@dimen/default_padding"
                 app:layout_constraintEnd_toStartOf="@id/tv_fuel"
                 app:layout_constraintStart_toEndOf="@id/tv_year"
-                app:layout_constraintTop_toBottomOf="@id/tv_brand" />
+                app:layout_constraintTop_toBottomOf="@id/tv_brand"
+                app:layout_constraintBottom_toTopOf="@id/tv_fuel"/>
 
             <TextView
                 android:id="@+id/tv_fuel"
